--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta property="og:image" content="" />
     <meta property="og:description" content="旅好きの人が集まるSNS！休日のプランは全てここに！" />
     <meta property="og:site_name" content="TRIPIC" />  
-    
+
 </head>
 
 <body id="page-top">
@@ -186,7 +186,7 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>今すぐ旅行に出かけよう！</h2>
+                <h2>今すぐ旅に出かけよう！</h2>
                 <a href="#contact" class="btn btn-outline btn-xl page-scroll">今すぐ始める</a>
             </div>
         </div>
