--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>今すぐ旅に出かけよう！</h2>
+                <h2>今すぐ旅に出よう！</h2>
                 <a href="#contact" class="btn btn-outline btn-xl page-scroll">今すぐ始める</a>
             </div>
         </div>
