--- a/index.html
+++ b/index.html
@@ -108,10 +108,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2>今すぐダウロード！（無料）</h2>
-                    <p>現在のところ、iPhone/iPadアプリでのみサービス提供中です。</p>
-                    <div class="badges">
-                        <a class="badge-link" href="https://itunes.apple.com/gb/app/tripic-%E6%97%85%E3%81%AE%E6%84%9F%E5%8B%95%E3%82%92%E3%82%B7%E3%82%A7%E3%82%A2%E3%81%99%E3%82%8B%E3%82%A2%E3%83%97%E3%83%AA/id1231386790?mt=8"><img src="img/app-store-badge.svg" alt=""></a>
+                    <div class="section-heading">
+                        <h2>今すぐダウロード！（無料）</h2>
+                        <p>現在のところ、iPhone/iPadアプリでのみサービス提供中です。</p>
+                        <div class="badges">
+                            <a class="badge-link" href="https://itunes.apple.com/gb/app/tripic-%E6%97%85%E3%81%AE%E6%84%9F%E5%8B%95%E3%82%92%E3%82%B7%E3%82%A7%E3%82%A2%E3%81%99%E3%82%8B%E3%82%A2%E3%83%97%E3%83%AA/id1231386790?mt=8"><img src="img/app-store-badge.svg" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
